# mlibc

./: meson.build
sysdeps/horizonos/: meson.build
sysdeps/horizonos/generic/: generic.cpp  horizonos.cpp
